// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/SubHeadings Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
  <div
    className="container color-primary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
  <div
    className="container color-inverted size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
</div>
`;

exports[`Storyshots Atoms/SubHeadings Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
</div>
`;

exports[`Storyshots Atoms/SubHeadings Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container color-base size-xs weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
  <div
    className="container color-base size-sm weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
  <div
    className="container color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
  <div
    className="container color-base size-lg weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
  <div
    className="container color-base size-xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
</div>
`;

exports[`Storyshots Atoms/SubHeadings Weights 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container color-base size-md weight-normal"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
  <div
    className="container color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </div>
</div>
`;
